# Epita-S9-DNN

./: .gitignore  README.md  pyproject.toml
notebooks/: pytorch.ipynb  tensorflow.ipynb
slides/: README.md
src/pytorch/: IntegratedGradients.py  Model.py
src/tensorflow/: IntegratedGradients.py  Model.py
