[tool.poetry]
name = "epita-s9-dnn"
version = "0.1.0"
description = ""
authors = ["lopilo24 <henri.jamet@epita.fr>"]

[tool.poetry.dependencies]
python = "3.9.7"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
tensorflow-hub = "^0.12.0"
lovely-tensors = "^0.1.8"
pandas = "^1.5.2"
black = "^22.10.0"
tensorflow = "^2.11.0"
jupyter = "^1.0.0"
torchvision = "^0.14.1"
opencv-python = "^4.7.0"
torch = "^1.13.1"
Pillow = "^9.4.0"
tqdm = "^4.64.1"
ipywidgets = "7.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
